@@ -290,3 +290,8 @@ watts.strogatz.game <- function(dim, size, nei, p) {
         PACKAGE="igraph")
 }
 
+lastcit.game <- function(n, edges=1, agebins=n/7100, pref=(1:(agebins+1))^-3) {
+  .Call("R_igraph_lastcit_game", as.numeric(n), as.numeric(edges), as.numeric(agebins),
+        as.numeric(pref),
+        PACKAGE="igraph")
+}
